--- a/moj-profil.html
+++ b/moj-profil.html
@@ -296,7 +296,7 @@
 </footer>
 
 <script>
-  const backendUrl = 'https://tvoj-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
+  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
 
   async function ucitajProfil() {
     const token = localStorage.getItem('token');
@@ -359,3 +359,4 @@
 
 </body>
 </html>
+
