--- a/moj-profil.html
+++ b/moj-profil.html
@@ -6,34 +6,23 @@
   <title>Moj profil – LokalniPlodovi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
-    :root {
-      --zelena: #2e7d32;
-      --zelena-svetla: #4caf50;
-      --svetlo: #f8f9f5;
-      --tamno: #333;
-      --siva: #666;
-      --belo: #ffffff;
-    }
-
-    * { margin:0; padding:0; box-sizing:border-box; }
-
     body {
-      font-family: 'Segoe UI', system-ui, sans-serif;
-      background: var(--svetlo);
-      color: var(--tamno);
+      font-family: 'Segoe UI', sans-serif;
+      background: #f8f9f5;
+      margin: 0;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
 
     header {
-      background: var(--zelena);
+      background: #2e7d32;
       color: white;
       padding: 1rem 2rem;
       position: sticky;
       top: 0;
       z-index: 1000;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
     }
 
     nav {
@@ -60,38 +49,24 @@
       font-weight: 500;
     }
 
-    .profile-container {
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 0 1.5rem;
-    }
-
     .profile-cover {
-      height: 250px;
-      background: var(--svetlo);
-      border-radius: 0 0 16px 16px;
+      height: 300px;
+      background: linear-gradient(135deg, #2e7d32, #4caf50);
       position: relative;
-      overflow: hidden;
-      border: 1px solid #eee;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--siva);
-      font-size: 1.2rem;
     }
 
     .profile-content {
+      max-width: 1400px;
+      margin: -120px auto 0;
+      padding: 0 2rem;
       display: flex;
-      gap: 3rem;
-      margin-top: -100px;
-      padding: 0 2rem 3rem;
       flex-wrap: wrap;
+      gap: 2rem;
     }
 
-    .profile-avatar-wrapper {
-      flex-shrink: 0;
-      position: relative;
-      z-index: 10;
+    .profile-left {
+      flex: 0 0 220px;
+      text-align: center;
     }
 
     .profile-avatar {
@@ -99,88 +74,85 @@
       height: 200px;
       border-radius: 50%;
       object-fit: cover;
-      border: 6px solid var(--belo);
+      border: 6px solid white;
       box-shadow: 0 8px 25px rgba(0,0,0,0.25);
     }
 
-    .profile-main {
+    .profile-right {
       flex: 1;
-      min-width: 300px;
-      padding-top: 60px;
+      min-width: 400px;
     }
 
     .profile-header {
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
     }
 
     .profile-name {
       font-size: 2.8rem;
-      margin-bottom: 0.5rem;
+      margin: 0;
     }
 
-    .profile-bio {
-      font-size: 1.2rem;
-      color: var(--siva);
-      line-height: 1.6;
-      max-width: 800px;
-    }
-
-    .profile-edit-btn {
+    .profile-edit {
       background: white;
-      color: var(--zelena);
-      border: 2px solid var(--zelena);
-      padding: 0.8rem 1.8rem;
+      color: #2e7d32;
+      border: 2px solid #2e7d32;
+      padding: 0.6rem 1.4rem;
       border-radius: 50px;
       cursor: pointer;
       font-weight: 600;
-      transition: 0.2s;
     }
 
-    .profile-edit-btn:hover {
-      background: var(--zelena);
+    .profile-edit:hover {
+      background: #2e7d32;
       color: white;
     }
 
-    .profile-details {
+    .profile-bio {
+      font-size: 1.15rem;
+      color: #555;
+      margin: 1rem 0 2rem;
+      line-height: 1.6;
+    }
+
+    .profile-info-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 1.5rem;
-      margin: 2rem 0;
     }
 
-    .detail-card {
+    .info-card {
       background: white;
-      padding: 1.5rem;
+      padding: 1.2rem;
       border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
       border: 1px solid #eee;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
 
-    .detail-label {
-      color: var(--zelena);
+    .info-label {
+      color: #2e7d32;
       font-weight: 600;
       font-size: 1rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.4rem;
       display: block;
     }
 
-    .detail-value {
+    .info-value {
       font-size: 1.1rem;
     }
 
-    .profile-actions {
+    .profile-bottom-actions {
+      margin: 3rem 0;
       display: flex;
       flex-direction: column;
-      gap: 1.2rem;
+      gap: 1rem;
       max-width: 400px;
-      margin: 3rem auto 0;
     }
 
     .btn {
-      padding: 1.1rem;
+      padding: 1rem;
       border-radius: 50px;
       font-size: 1.1rem;
       font-weight: 600;
@@ -190,26 +162,26 @@
     }
 
     .btn-primary {
-      background: var(--zelena);
+      background: #2e7d32;
       color: white;
       border: none;
     }
 
-    .btn-primary:hover { background: var(--zelena-svetla); }
+    .btn-primary:hover { background: #4caf50; }
 
     .btn-secondary {
       background: transparent;
-      border: 2px solid var(--zelena);
-      color: var(--zelena);
+      border: 2px solid #2e7d32;
+      color: #2e7d32;
     }
 
     .btn-secondary:hover {
-      background: var(--zelena);
+      background: #2e7d32;
       color: white;
     }
 
     footer {
-      background: var(--tamno);
+      background: #5d4037;
       color: white;
       text-align: center;
       padding: 2rem;
@@ -235,58 +207,55 @@
   </nav>
 </header>
 
-<div class="profile-wrapper">
-  <div class="profile-cover">
-    <!-- Naslovna fotografija – ovde možeš da staviš svoju sliku kasnije -->
-    <div style="height:100%; display:flex; align-items:center; justify-content:center; color:white; font-size:1.5rem; opacity:0.7;">
-      Naslovna fotografija (klikni Izmeni profil da promeniš)
-    </div>
-  </div>
+<div class="profile-container">
+  <div class="profile-cover"></div>
 
   <div class="profile-content">
     <div class="profile-avatar-wrapper">
       <img src="https://via.placeholder.com/200?text=Boris" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
     </div>
 
-    <div class="profile-header">
-      <div>
-        <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
-        <p class="profile-bio" id="profile-bio">Opis domaćinstva...</p>
+    <div class="profile-main">
+      <div class="profile-header">
+        <div>
+          <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
+          <p class="profile-bio" id="profile-bio">Opis domaćinstva...</p>
+        </div>
+
+        <button class="profile-edit-btn" onclick="izmeniProfil()">Izmeni profil</button>
       </div>
 
-      <button class="profile-edit-btn" onclick="izmeniProfil()">Izmeni profil</button>
-    </div>
+      <div class="profile-details">
+        <div class="detail-card">
+          <div class="detail-label">Email</div>
+          <div id="email">Učitavanje...</div>
+        </div>
+        <div class="detail-card">
+          <div class="detail-label">Telefon</div>
+          <div id="telefon">Učitavanje...</div>
+        </div>
+        <div class="detail-card">
+          <div class="detail-label">Lokacija</div>
+          <div id="lokacija">Učitavanje...</div>
+        </div>
+        <div class="detail-card">
+          <div class="detail-label">Niše</div>
+          <div id="nise">Učitavanje...</div>
+        </div>
+        <div class="detail-card">
+          <div class="detail-label">Opis</div>
+          <div id="opis">Učitavanje...</div>
+        </div>
+        <div class="detail-card">
+          <div class="detail-label">Registrovan</div>
+          <div id="registeredAt">Učitavanje...</div>
+        </div>
+      </div>
 
-    <div class="profile-details">
-      <div class="detail-card">
-        <div class="detail-label">Email</div>
-        <div id="email">Učitavanje...</div>
+      <div class="profile-actions">
+        <button class="btn btn-primary" onclick="objaviNovost()">Objavi novost</button>
+        <button class="btn btn-secondary" onclick="dodajProizvod()">Dodaj proizvod</button>
       </div>
-      <div class="detail-card">
-        <div class="detail-label">Telefon</div>
-        <div id="telefon">Učitavanje...</div>
-      </div>
-      <div class="detail-card">
-        <div class="detail-label">Lokacija</div>
-        <div id="lokacija">Učitavanje...</div>
-      </div>
-      <div class="detail-card">
-        <div class="detail-label">Niše</div>
-        <div id="nise">Učitavanje...</div>
-      </div>
-      <div class="detail-card">
-        <div class="detail-label">Opis</div>
-        <div id="opis">Učitavanje...</div>
-      </div>
-      <div class="detail-card">
-        <div class="detail-label">Registrovan</div>
-        <div id="registeredAt">Učitavanje...</div>
-      </div>
-    </div>
-
-    <div class="profile-actions">
-      <button class="btn btn-primary" onclick="objaviNovost()">Objavi novost</button>
-      <button class="btn btn-secondary" onclick="dodajProizvod()">Dodaj proizvod</button>
     </div>
   </div>
 </div>
@@ -359,4 +328,5 @@
 
 </body>
 </html>
+
 
