--- a/moj-profil.html
+++ b/moj-profil.html
@@ -87,15 +87,22 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
     }
 
     .profile-name {
       font-size: 2.8rem;
-      margin: 0;
+      margin-bottom: 0.5rem;
     }
 
-    .profile-edit {
+    .profile-bio {
+      font-size: 1.15rem;
+      color: #555;
+      margin: 1rem 0 2rem;
+      line-height: 1.6;
+    }
+
+    .profile-edit-btn {
       background: white;
       color: #2e7d32;
       border: 2px solid #2e7d32;
@@ -105,16 +112,9 @@
       font-weight: 600;
     }
 
-    .profile-edit:hover {
+    .profile-edit-btn:hover {
       background: #2e7d32;
       color: white;
-    }
-
-    .profile-bio {
-      font-size: 1.15rem;
-      color: #555;
-      margin: 1rem 0 2rem;
-      line-height: 1.6;
     }
 
     .profile-info-grid {
@@ -149,6 +149,8 @@
       flex-direction: column;
       gap: 1rem;
       max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .btn {
@@ -208,14 +210,18 @@
 </header>
 
 <div class="profile-container">
-  <div class="profile-cover"></div>
+  <div class="profile-cover">
+    <div style="height:100%; display:flex; align-items:center; justify-content:center; color:white; font-size:1.5rem; opacity:0.7;">
+      Naslovna fotografija (klikni Izmeni profil da promeniš)
+    </div>
+  </div>
 
   <div class="profile-content">
-    <div class="profile-avatar-wrapper">
+    <div class="profile-left">
       <img src="https://via.placeholder.com/200?text=Boris" alt="Profilna slika" class="profile-avatar" id="profile-avatar">
     </div>
 
-    <div class="profile-main">
+    <div class="profile-right">
       <div class="profile-header">
         <div>
           <h1 class="profile-name" id="profile-name">Učitavanje...</h1>
@@ -225,29 +231,29 @@
         <button class="profile-edit-btn" onclick="izmeniProfil()">Izmeni profil</button>
       </div>
 
-      <div class="profile-details">
-        <div class="detail-card">
-          <div class="detail-label">Email</div>
+      <div class="profile-info-grid">
+        <div class="info-card">
+          <div class="info-label">Email</div>
           <div id="email">Učitavanje...</div>
         </div>
-        <div class="detail-card">
-          <div class="detail-label">Telefon</div>
+        <div class="info-card">
+          <div class="info-label">Telefon</div>
           <div id="telefon">Učitavanje...</div>
         </div>
-        <div class="detail-card">
-          <div class="detail-label">Lokacija</div>
+        <div class="info-card">
+          <div class="info-label">Lokacija</div>
           <div id="lokacija">Učitavanje...</div>
         </div>
-        <div class="detail-card">
-          <div class="detail-label">Niše</div>
+        <div class="info-card">
+          <div class="info-label">Niše</div>
           <div id="nise">Učitavanje...</div>
         </div>
-        <div class="detail-card">
-          <div class="detail-label">Opis</div>
+        <div class="info-card">
+          <div class="info-label">Opis</div>
           <div id="opis">Učitavanje...</div>
         </div>
-        <div class="detail-card">
-          <div class="detail-label">Registrovan</div>
+        <div class="info-card">
+          <div class="info-label">Registrovan</div>
           <div id="registeredAt">Učitavanje...</div>
         </div>
       </div>
