--- a/moj-profil.html
+++ b/moj-profil.html
@@ -49,33 +49,19 @@
       font-weight: 500;
     }
 
-    .profile-wrapper {
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 0 1.5rem;
-    }
-
     .profile-cover {
-      height: 200px;
+      height: 280px;
       background: linear-gradient(135deg, #2e7d32, #4caf50);
-      border-radius: 0 0 16px 16px;
       position: relative;
-      overflow: hidden;
     }
 
     .profile-content {
-      display: flex;
-      gap: 2rem;
-      margin-top: -80px;
+      max-width: 1400px;
+      margin: -100px auto 0;
       padding: 0 2rem 3rem;
+      display: flex;
       flex-wrap: wrap;
-    }
-
-    .profile-left {
-      flex: 0 0 220px;
-      text-align: center;
-      position: relative;
-      z-index: 10;
+      gap: 2.5rem;
     }
 
     .profile-avatar {
@@ -85,12 +71,17 @@
       object-fit: cover;
       border: 6px solid white;
       box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+      position: absolute;
+      top: 80px;
+      left: 3rem;
+      z-index: 10;
     }
 
-    .profile-right {
+    .profile-main {
       flex: 1;
       min-width: 400px;
       padding-top: 40px;
+      padding-left: 3rem;
     }
 
     .profile-header {
@@ -101,15 +92,8 @@
     }
 
     .profile-name {
-      font-size: 2.6rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .profile-bio {
-      font-size: 1.15rem;
-      color: #555;
-      line-height: 1.6;
-      max-width: 800px;
+      font-size: 2.8rem;
+      margin: 0;
     }
 
     .profile-edit-btn {
@@ -128,11 +112,17 @@
       color: white;
     }
 
+    .profile-bio {
+      font-size: 1.15rem;
+      color: #555;
+      margin: 1rem 0 2rem;
+      line-height: 1.6;
+    }
+
     .profile-info-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 1.5rem;
-      margin: 2rem 0;
     }
 
     .info-card {
@@ -158,7 +148,7 @@
     .profile-actions {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.2rem;
       max-width: 400px;
       margin: 3rem auto 0;
     }
@@ -220,11 +210,7 @@
 </header>
 
 <div class="profile-container">
-  <div class="profile-cover">
-    <div style="height:100%; display:flex; align-items:center; justify-content:center; color:white; font-size:1.5rem; opacity:0.7;">
-      Naslovna fotografija (klikni Izmeni profil da promeniš)
-    </div>
-  </div>
+  <div class="profile-cover"></div>
 
   <div class="profile-content">
     <div class="profile-left">
@@ -344,4 +330,5 @@
 
 </body>
 </html>
+
 
