--- a/moj-profil.html
+++ b/moj-profil.html
@@ -337,9 +337,62 @@
 
   document.addEventListener('DOMContentLoaded', ucitajProfil);
 </script>
+<!-- Upload profilne slike i cover-a (Cloudinary unsigned) -->
+<script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
 
+<script>
+  const cloudName = 'dlpavpfl'; // tvoj Cloud name
+  const uploadPreset = 'unsigned-profile'; // tačno ime preset-a koji si napravio
+
+  // Funkcija za upload profilne slike
+  function uploadAvatar() {
+    cloudinary.openUploadWidget({
+      cloud_name: cloudName,
+      upload_preset: uploadPreset,
+      folder: 'profiles/avatars',
+      sources: ['local'],
+      multiple: false,
+      cropping: true,
+      croppingAspectRatio: 1,
+      croppingDefaultSelectionRatio: 1,
+      maxImageWidth: 400,
+      maxImageHeight: 400
+    }, (err, result) => {
+      if (!err && result && result.event === "success") {
+        const url = result.info.secure_url;
+        document.getElementById('profile-avatar').src = url;
+        alert('Profilna slika uspešno upload-ovana! (URL: ' + url + ')');
+        // Ovdje možeš da pošalješ url na backend da sačuvaš u bazi
+        // fetch(backendUrl + '/update-avatar', { method: 'POST', body: JSON.stringify({ url }) });
+      }
+    });
+  }
+
+  // Funkcija za upload naslovne fotografije
+  function uploadCover() {
+    cloudinary.openUploadWidget({
+      cloud_name: cloudName,
+      upload_preset: uploadPreset,
+      folder: 'profiles/covers',
+      sources: ['local'],
+      multiple: false,
+      maxImageWidth: 1400,
+      maxImageHeight: 300
+    }, (err, result) => {
+      if (!err && result && result.event === "success") {
+        const url = result.info.secure_url;
+        document.getElementById('profile-cover').style.backgroundImage = `url(${url})`;
+        document.getElementById('profile-cover').style.backgroundSize = 'cover';
+        document.getElementById('profile-cover').style.backgroundPosition = 'center';
+        alert('Naslovna fotografija uspešno upload-ovana! (URL: ' + url + ')');
+        // Ovdje možeš da pošalješ url na backend da sačuvaš u bazi
+      }
+    });
+  }
+</script>
 </body>
 </html>
+
 
 
 
