--- a/moj-profil.html
+++ b/moj-profil.html
@@ -280,7 +280,7 @@
 </footer>
 
 <script>
-  const backendUrl = 'https://tvoj-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
+  const backendUrl = 'https://lokalni-backend.onrender.com'; // ← TVOJ PRAVI RENDER URL
 
   async function ucitajProfil() {
     const token = localStorage.getItem('token');
@@ -343,6 +343,7 @@
 
 </body>
 </html>
+
 
 
 
