--- a/moj-profil.html
+++ b/moj-profil.html
@@ -50,14 +50,14 @@
     }
 
     .profile-cover {
-      height: 280px;
+      height: 240px;
       background: linear-gradient(135deg, #2e7d32, #4caf50);
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       text-align: center;
     }
 
@@ -71,8 +71,8 @@
     }
 
     .profile-avatar {
-      width: 200px;
-      height: 200px;
+      width: 220px;
+      height: 220px;
       border-radius: 50%;
       object-fit: cover;
       border: 6px solid white;
@@ -86,7 +86,7 @@
     .profile-main {
       flex: 1;
       min-width: 400px;
-      padding-top: 40px;
+      padding-top: 60px;
       padding-left: 3rem;
     }
 
@@ -220,7 +220,7 @@
 
 <div class="profile-container">
   <div class="profile-cover">
-    <div style="height:100%; display:flex; align-items:center; justify-content:center; color:white; font-size:1.5rem; opacity:0.7;">
+    <div style="height:100%; display:flex; align-items:center; justify-content:center; color:white; font-size:1.4rem; opacity:0.8;">
       Naslovna fotografija (klikni Izmeni profil da promeniš)
     </div>
   </div>
@@ -233,8 +233,8 @@
     <div class="profile-main">
       <div class="profile-header">
         <div>
-          <h1 class="profile-name" id="profileName">Učitavanje...</h1>
-          <p class="profile-bio" id="profileBio">Opis domaćinstva...</p>
+          <h1 class="profile-name" id="profileName">Boris Gutalj</h1>
+          <p class="profile-bio" id="profileBio">dev.test</p>
         </div>
 
         <button class="profile-edit-btn" onclick="izmeniProfil()">Izmeni profil</button>
@@ -243,27 +243,27 @@
       <div class="profile-info-grid">
         <div class="detail-card">
           <div class="detail-label">Email</div>
-          <div id="email">Učitavanje...</div>
+          <div id="email">bgutal1@gmail.com</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Telefon</div>
-          <div id="telefon">Učitavanje...</div>
+          <div id="telefon">0641402837</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Lokacija</div>
-          <div id="lokacija">Učitavanje...</div>
+          <div id="lokacija">Kragujevac</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Niše</div>
-          <div id="nise">Učitavanje...</div>
+          <div id="nise">Jaja</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Opis</div>
-          <div id="opis">Učitavanje...</div>
+          <div id="opis">dev.test</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Registrovan</div>
-          <div id="registeredAt">Učitavanje...</div>
+          <div id="registeredAt">18. 2. 2026. 22:52:35</div>
         </div>
       </div>
 
