--- a/moj-profil.html
+++ b/moj-profil.html
@@ -91,37 +91,20 @@
     }
 
     .profile-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
+      text-align: center;
       margin-bottom: 1.5rem;
     }
 
     .profile-name {
-      font-size: 2.8rem;
+      font-size: 3rem;
       margin: 0;
       color: white;
       text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-    }
-
-    .profile-edit-btn {
-      background: white;
-      color: #2e7d32;
-      border: 2px solid #2e7d32;
-      padding: 0.6rem 1.4rem;
-      border-radius: 50px;
-      cursor: pointer;
-      font-weight: 600;
-      margin-top: 0.5rem;
-    }
-
-    .profile-edit-btn:hover {
-      background: #2e7d32;
-      color: white;
+      font-weight: 700;
     }
 
     .profile-bio {
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       color: #ddd;
       margin: 1rem 0 2rem;
       line-height: 1.6;
@@ -231,39 +214,35 @@
     </div>
 
     <div class="profile-main">
-      <div class="profile-header">
-        <div>
-          <h1 class="profile-name" id="profileName">Boris Gutalj</h1>
-          <p class="profile-bio" id="profileBio">dev.test</p>
-        </div>
-
-        <button class="profile-edit-btn" onclick="izmeniProfil()">Izmeni profil</button>
+      <div class="profile-header" style="text-align:center;">
+        <h1 class="profile-name" id="profileName">Učitavanje...</h1>
+        <p class="profile-bio" id="profileBio">Opis domaćinstva...</p>
       </div>
 
       <div class="profile-info-grid">
         <div class="detail-card">
           <div class="detail-label">Email</div>
-          <div id="email">bgutal1@gmail.com</div>
+          <div id="email">Učitavanje...</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Telefon</div>
-          <div id="telefon">0641402837</div>
+          <div id="telefon">Učitavanje...</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Lokacija</div>
-          <div id="lokacija">Kragujevac</div>
+          <div id="lokacija">Učitavanje...</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Niše</div>
-          <div id="nise">Jaja</div>
+          <div id="nise">Učitavanje...</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Opis</div>
-          <div id="opis">dev.test</div>
+          <div id="opis">Učitavanje...</div>
         </div>
         <div class="detail-card">
           <div class="detail-label">Registrovan</div>
-          <div id="registeredAt">18. 2. 2026. 22:52:35</div>
+          <div id="registeredAt">Učitavanje...</div>
         </div>
       </div>
 
