--- a/moj-profil.html
+++ b/moj-profil.html
@@ -50,7 +50,7 @@
     }
 
     .profile-cover {
-      height: 280px;
+      height: 150px;
       background: linear-gradient(135deg, #2e7d32, #4caf50);
       position: relative;
       display: flex;
@@ -95,13 +95,13 @@
       margin-bottom: 1.5rem;
     }
 
-    .profile-name {
-      font-size: 3rem;
-      margin: 0;
-      color: white;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.5);
-      font-weight: 700;
-    }
+   .profile-name {
+  font-size: 2.8rem;
+  margin: 0;
+  color: #222;   /* TAMNA BOJA umesto bele */
+  font-weight: 700;
+}
+
 
     .profile-bio {
       font-size: 1.2rem;
@@ -326,6 +326,7 @@
 
 </body>
 </html>
+
 
 
 
